# data-drift-autopsy

./: .gitignore  README.md  SETUP.md  launch_dashboard.sh  pyproject.toml
configs/examples/: basic_drift_detection.yaml
examples/: README.md
examples/dashboard/: README.md  __init__.py  app.py  data_loader.py  visualizations.py
examples/quickstart/: folktables_demo.py  hallucination_demo.py  simple_example.py
outputs/: folktables_drift_results.json
src/drift_autopsy/: __init__.py
src/drift_autopsy/config/: __init__.py  loader.py  schema.py
src/drift_autopsy/core/: __init__.py  dataset.py  detector.py  localizer.py  pipeline.py  rca.py  result.py
src/drift_autopsy/data/: __init__.py  loaders.py  validators.py
src/drift_autopsy/detectors/: __init__.py
src/drift_autopsy/detectors/distribution/: __init__.py  mmd.py
src/drift_autopsy/detectors/hallucination/: __init__.py  confidence_density.py
src/drift_autopsy/detectors/model_based/: __init__.py  domain_classifier.py
src/drift_autopsy/detectors/proxy/: __init__.py  cbpe.py
src/drift_autopsy/detectors/statistical/: __init__.py  ks_test.py  psi.py
src/drift_autopsy/localizers/: __init__.py  univariate.py
src/drift_autopsy/rca/: __init__.py  shap_analyzer.py
src/drift_autopsy/registry/: __init__.py  detector_registry.py  localizer_registry.py  rca_registry.py
src/drift_autopsy/utils/: __init__.py  logging_config.py
tests/: test_smoke.py
